# terra

./: .env.example  .gitignore  LICENSE  Makefile  README.md  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: derive.py  gemini.py  http_security.py  image_jobs.py  image_pipeline.py  image_verifier.py  images.py  main.py  maintenance.py  observability.py  planet_guide.py  rate_limit.py  repository.py  schema.py  semantic_guide.py  world_bible.py
backend/tests/: test_deployment_config.py  test_http_security.py  test_image_jobs_pipeline.py  test_image_pipeline.py  test_image_verifier.py  test_main_observability.py  test_maintenance.py  test_model_supply_chain.py  test_observability.py  test_pipeline_reliability.py  test_semantic_guide.py  test_terra.py
deploy/: README.md  com.jiun.terra.plist.template
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: fixtures.ts  terra.spec.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
frontend/src/components/: GalleryPanel.tsx  GeneratedArtwork.tsx  InputPanel.tsx  PanelBoundary.tsx  ReportPanel.tsx  SceneBoundary.tsx
frontend/src/three/: PlanetScene.tsx  PlanetSystem.tsx  clipmap.ts  shaders.ts
scripts/: backup.py  build_frontend_atomic.sh  install_launchagent.sh
