[project]
name = "backend"
version = "0.1.0"
description = "Fiction-to-planet analysis, simulation, and generative visualization API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=9.0.2",
]
